# mindweave-v1

./: .dockerignore  .gitignore  .openenvignore  README.md  client.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
mindweave_env/: README.md  __init__.py  client.py  index.html  models.py  openenv.yaml  pyproject.toml  test_stream.py
mindweave_env/openenv_mindweave_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mindweave_env/server/: Dockerfile  __init__.py  app.py  environment.py  environment2.py  main_ui.py  models_ui.py  router.py
mindweave_env/server/agents/: adaptive.py  behavioral.py  cognitive.py  emotional.py  safety.py
mindweave_env/server/baseline/: baseline_agent.py
mindweave_env/server/config/: policy_config.py
mindweave_env/server/core/: model_store.py
mindweave_env/server/emotions/: embedding_detector.py  emotion_data.py  emotion_mapper.py
mindweave_env/server/evaluation/: compare_outputs.py  plot_results.py  run_baseline.py  run_mindweave.py
mindweave_env/server/evaluation/results/: baseline.json  baseline_full.json  comparison_summary.txt  mindweave_report_full.json  mindweave_scores.json
mindweave_env/server/evaluator/: grader.py
mindweave_env/server/llm/: llm_handler.py
mindweave_env/server/memory/: vector_store.py
mindweave_env/server/rl/: ppo_model.py  ppo_trainer.py  state_encoder.py  train_ppo.py
mindweave_env/server/training/: generate_data.py
mindweave_v1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: ppo_mental_health_final.pt
